fixed layout bugs

--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -22,9 +22,9 @@
   display: flex;
   align-items: center;
   padding: 16px 20px;
-  border: 1px dashed #4C4CFF;
   box-sizing: border-box;
   color: #F2F2F3;
   display: flex;
+  border: none;
 }
 
